<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="monospace"
            android:text="@string/_2_5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_progress">

            <View
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:background="@color/black"
                android:layout_weight="2"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:layout_weight="2"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="28dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:text="@string/q2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTwoA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:text="A. 2"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="12sp"
        android:background="@drawable/btn_ans" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTwoB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:text="B. 1"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="12sp"
        android:background="@drawable/btn_ans" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTwoC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:text="C. 4"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="12sp"
        android:background="@drawable/btn_ans" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp"
        android:background="@drawable/bg_normal_btn" />

</LinearLayout>